# cookiecutter-pypackage

./: .editorconfig  .pre-commit-config.yaml  LICENSE  README.md  cookiecutter.json
.github/workflows/: testing.yml
hooks/: post_gen_project.py  pre_gen_project.py
tests/: test_bake_project.py
{{cookiecutter.project_hyphen}}/: Makefile  README.md  main.py  requirements.txt  setup.py
{{cookiecutter.project_hyphen}}/conf/: logging.yml
{{cookiecutter.project_hyphen}}/{{cookiecutter.project_slug}}/: __init__.py  __main__.py  config.py  {{cookiecutter.project_slug}}.py
{{cookiecutter.project_hyphen}}/{{cookiecutter.project_slug}}/commands/remote/: cli.py
{{cookiecutter.project_hyphen}}/{{cookiecutter.project_slug}}/commands/remote/commands/: add.py  rename.py
{{cookiecutter.project_slug}}/: .bumpversion.cfg  .coveragerc  .flake8  .gitlab-ci.yml  .pre-commit-config.yaml  LICENSE  Makefile  README.md  context.j2  mkdocs.yml  pyproject.toml
{{cookiecutter.project_slug}}/.github/workflows/: gh-pages.yml  tests.yml
{{cookiecutter.project_slug}}/docs-mkdocs/: contributing.md  dev.md  installation.md  testing.md
{{cookiecutter.project_slug}}/docs-sphinx/: conf.py  contributing.rst  dev.rst  index.rst  installation.rst  testing.rst  usage.rst
{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}/: __init__.py  cli.py
{{cookiecutter.project_slug}}/tests/: test_{{cookiecutter.package_name}}.py
